# Volatility-Balancing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CLEANUP_PLAN.md  CURRENT_VS_TARGET_MAPPING.md  DATABASE_MIGRATION_INSTRUCTIONS.md  DEBUGGING_GUIDE.md  DEPRECATED_REMOVAL_PLAN.md  DEPRECATED_REMOVAL_SUMMARY.md  Dockerfile  FINAL_DIAGNOSIS.md  FIXES_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAY_GUIDE.md  PORTFOLIO_SCOPED_MIGRATION_STATUS.md  POSITION_COCKPIT_FINAL_SUMMARY.md  POSITION_COCKPIT_IMPLEMENTATION_SUMMARY.md  QA_INTEGRATION_TESTS_COMPLETE.md  QA_INTEGRATION_TEST_FIXES.md  QA_INTEGRATION_TEST_STATUS.md  QA_MIGRATION_COMPLETE.md  QA_QUICK_START.md  QA_REGRESSION_TEST_FIXES.md  QA_TEST_COMMANDS.md  QA_TEST_FAILURE_ANALYSIS.md  QA_TEST_PLAN.md  QA_UNIT_TEST_FIXES_FINAL.md  QA_WARNINGS_ANALYSIS.md  QUICK_START.md  QUICK_START_WSL.md  README.md  RECONCILIATION_PROGRESS.md  RECONCILIATION_STATUS.md  REGRESSION_FIX_SUMMARY.md  (+39 more)
.claude/: PRD.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE_docs.md
app/: main.py
backend/: DEMO_GUIDE.md  Dockerfile  EXCEL_EXPORT_COMPLETION_SUMMARY.md  EXCEL_EXPORT_GUIDE.md  PARAMETER_OPTIMIZATION_EXPLAINED.md  PERSISTENCE_GUIDE.md  PHASE2_QUICK_START.md  TEST_COVERAGE_REPORT.md  alembic.ini  analyze_test_failures.py  check_constraint.py  check_database.sh  conftest.py  debug_algo_result.py  debug_daily_cap.py  debug_market_storage.py  debug_minimal.py  debug_price_data.py  debug_simulation_result.py  debug_sql_daily_cap.py  demo.py  demo_optimization_system.py  demo_web.html  env.example  fix_all_unit_tests.py  generate_trigger_analysis.py  migrate_add_anchor_price.py  migrate_add_guardrails.py  migrate_add_trades.py  quick_demo.py  quick_test.py  requirements.txt  run_qa_tests.py  run_tests.py  simple_results_viewer.py  start_with_sql.py  test_after_hours_behavior.py  test_after_hours_trades.py  test_api_direct.py  test_bid_ask.py  (+30 more)
docs/: .pre-commit-config.yaml  API_POSITION_COCKPIT.md  DEVELOPER_NOTES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAINTENANCE.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_STRUCTURE_GUIDE.md  MIGRATION.md  ONBOARDING.md  OPERATING_MODEL_24x7.md  PHASE1_COMPLETION_REPORT.md  PHASE1_COMPLETION_SUMMARY.md  QUICK_START.md  (+17 more)
(+667 files in other folders)
