# pyproject.toml
# =========================

[project]
name = "volatility-balancing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]
redis = [
  "redis>=5.0"
]
sql = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
]
market = [
  "yfinance>=0.2",
  "pandas>=2.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"backend/tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q --tb=short -m 'not e2e and not online' -n auto --dist worksteal"
markers = [
    "e2e: requires a live server and real network access",
    "online: requires live network access (market data, exports)",
]
filterwarnings = [
    "ignore::DeprecationWarning:openpyxl.*",
    "ignore::PendingDeprecationWarning:starlette.*",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
strict_optional = true
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true 

# Be strict on our app code by default; we’ll relax 3rd-party+tests below
check_untyped_defs = true

# Silence third-party “missing stubs” noise
[[tool.mypy.overrides]]
module = [
  "pytest",
  "fastapi.*",
  "pydantic.*",
  "httpx.*",
  "uvicorn.*",
  "sqlalchemy.*",
  "yfinance",
  "pandas.*",
  "redis",
]
ignore_missing_imports = true

# Keep tests out of the way for now (optional)
[[tool.mypy.overrides]]
module = ["backend.tests.*"]
ignore_errors = true
